Make sure the generated bck2brwsr library file is really usable in the browser

--- a/charts-api/pom.xml
+++ b/charts-api/pom.xml
@@ -85,6 +85,10 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <ignoreBootClassPath>false</ignoreBootClassPath>
+                    <obfuscation>MINIMAL</obfuscation>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
