--- a/charts-api/pom.xml
+++ b/charts-api/pom.xml
@@ -12,8 +12,8 @@
         distributed as part of the DukeScript project.
     </description>
     <properties>
-        <net.java.html.version>1.3</net.java.html.version>
-        <bck2brwsr.version>0.19</bck2brwsr.version>
+        <net.java.html.version>1.4</net.java.html.version>
+        <bck2brwsr.version>0.21</bck2brwsr.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
@@ -68,7 +68,7 @@
         <dependency>
             <groupId>org.netbeans.html</groupId>
             <artifactId>net.java.html.boot.fx</artifactId>
-            <version>1.2.3</version>
+            <version>${net.java.html.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
