--- a/sample/client-web/pom.xml
+++ b/sample/client-web/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>com.dukescript.charts</groupId>
         <artifactId>sample-pom</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>2.0-SNAPSHOT</version>
     </parent>
 
     <groupId>com.dukescript.charts</groupId>
     <artifactId>sample-web</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Charts Sample for Web</name>
@@ -180,7 +180,7 @@
         <dependency>
             <groupId>com.dukescript.api</groupId>
             <artifactId>charts</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <classifier>bck2brwsr</classifier>
         </dependency>
     </dependencies>
