--- a/sample/client/pom.xml
+++ b/sample/client/pom.xml
@@ -6,12 +6,12 @@
   <parent>
       <groupId>com.dukescript.charts</groupId>
       <artifactId>sample-pom</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>2.0-SNAPSHOT</version>
   </parent>
 
   <groupId>com.dukescript.charts</groupId>
   <artifactId>sample</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>2.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>Charts Sample General Code</name>
@@ -187,7 +187,7 @@
     <dependency>
       <groupId>com.dukescript.api</groupId>
       <artifactId>charts</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${project.version}</version>
       <type>jar</type>
     </dependency>
   </dependencies>
