Updating to new version of RoboVM

--- a/sample/client-ios/pom.xml
+++ b/sample/client-ios/pom.xml
@@ -17,9 +17,9 @@
     <name>Charts Sample for iOS</name>
 
     <properties>
-        <project.mainclass>com.dukescript.charts.iOSMain</project.mainclass>
+        <project.mainclass>com.dukescript.charts.sample.iOSMain</project.mainclass>
         <netbeans.compile.on.save>none</netbeans.compile.on.save>
-        <robovm.version>1.6.0</robovm.version>
+        <robovm.version>2.3.14</robovm.version>
     </properties>
     <build>
         <plugins>
@@ -168,7 +168,7 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.robovm</groupId>
+                <groupId>com.mobidevelop.robovm</groupId>
                 <artifactId>robovm-maven-plugin</artifactId>
                 <version>${robovm.version}</version>
                 <configuration>
@@ -221,7 +221,7 @@
         <dependency>
             <groupId>com.dukescript.presenters</groupId>
             <artifactId>ios</artifactId>
-            <version>0.9.1</version>
+            <version>1.7.1</version>
             <scope>runtime</scope>
             <exclusions>
                 <exclusion>
@@ -241,13 +241,13 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>org.robovm</groupId>
+            <groupId>com.mobidevelop.robovm</groupId>
             <artifactId>robovm-cocoatouch</artifactId>
             <version>${robovm.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
-            <groupId>org.robovm</groupId>
+            <groupId>com.mobidevelop.robovm</groupId>
             <artifactId>robovm-rt</artifactId>
             <version>${robovm.version}</version>
             <type>jar</type>
