--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <name>DukeScript Charts</name>
     <groupId>com.dukescript.charts</groupId>
     <artifactId>pom</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>1.1</version>
     <packaging>pom</packaging>
     <url>http://dukescript.com</url>
     <description>A Java API for drawing charts</description>
