--- a/sample/client-ios/pom.xml
+++ b/sample/client-ios/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>com.dukescript.charts</groupId>
         <artifactId>sample-pom</artifactId>
-        <version>2.0-SNAPSHOT</version>
+        <version>1.1</version>
     </parent>
     
     <groupId>com.dukescript.charts</groupId>
     <artifactId>sample-ios</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>1.1</version>
     <packaging>jar</packaging>
 
     <name>Charts Sample for iOS</name>
