--- a/sample/client-netbeans/pom.xml
+++ b/sample/client-netbeans/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>com.dukescript.charts</groupId>
         <artifactId>sample-pom</artifactId>
-        <version>2.0-SNAPSHOT</version>
+        <version>1.1</version>
     </parent>
 
     <groupId>com.dukescript.charts.sample</groupId>
     <artifactId>sample-nb</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>1.1</version>
     <packaging>nbm-application</packaging>
 
     <name>Charts Sample for NetBeans</name>
