--- a/sample/client/pom.xml
+++ b/sample/client/pom.xml
@@ -6,12 +6,12 @@
   <parent>
       <groupId>com.dukescript.charts</groupId>
       <artifactId>sample-pom</artifactId>
-      <version>2.0-SNAPSHOT</version>
+      <version>1.1</version>
   </parent>
 
   <groupId>com.dukescript.charts</groupId>
   <artifactId>sample</artifactId>
-  <version>2.0-SNAPSHOT</version>
+  <version>1.1</version>
   <packaging>bundle</packaging>
 
   <name>Charts Sample General Code</name>
