--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -5,12 +5,12 @@
 
   <groupId>com.dukescript.charts</groupId>
   <artifactId>sample-pom</artifactId>
-  <version>2.0-SNAPSHOT</version>
+  <version>1.1</version>
   <packaging>pom</packaging>
   <parent>
       <groupId>com.dukescript.charts</groupId>
       <artifactId>pom</artifactId>
-      <version>2.0-SNAPSHOT</version>
+      <version>1.1</version>
   </parent>
 
   <name>Charts Sample</name>
